--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "dayjs": "^1.8.24",
     "json-bigint": "^0.3.0",
     "vant": "^2.6.0",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
